--- a/matplotlib_get_started.html
+++ b/matplotlib_get_started.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Python Operators</title>
+		<title>Matplotlib Get Started</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reset.min.css">
@@ -18,52 +18,23 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<h1>Python Operators</h1>
-					<p>Using operators in Python.</p>
-				</section>
+                <section>
+                    <h2>Matplotlib Get Started</h2>
+                    <section>
+                        <h3>Installation</h3>
+                        <p>If you have Python and PIP already installed on a system, then installation of Matplotlib is very easy.</p>
+                        <p>Install it using this command:</p>
+                        <pre><code class="bash" data-line-numbers>pip install matplotlib</code></pre>
+                    </section>
+                    <section>
+                        <h3>Import Matplotlib</h3>
+                        <p>Once Matplotlib is installed, import it in your applications by adding the <span class="orange">import</span> module:</p>
+                        <pre><code class="python" data-line-numbers>
+import matplotlib
+                        </code></pre>
+                    </section>
+                </section>
 
-				<section>
-					<h2>Operators</h2>
-					<p><span class="green">Operators</span> are used to perform <span class="orange">operations</span> on <span class="orange">variables</span> and <span class="orange">values</span>. Python divides the operators in the following groups:</p>
-					<ul>
-						<li>Arithmetic operators</li>
-						<li>Assignment operators</li>
-						<li>Comparison operators</li>
-						<li>Logical operators</li>
-						<li>Identity operators</li>
-						<li>Membership operators</li>
-						<li>Bitwise operators</li>
-					</ul>
-					<aside class="notes">
-						Speaker notes: We will go through the most common ones.
-					</aside>
-				</section>
-
-				<section>
-					<section>
-						<h2>Arithmetic Operators</h2>
-						<p><span class="green">Arithmetic operators</span> are used with <span class="orange">numeric values</span> to perform common <span class="orange">mathematical operations</span>:</p>
-						<pre><code class="python" data-line-numbers>
-print(10 + 5)
-print(10 - 5)
-print(10 * 5)
-print(10 / 5)
-print(10 % 5)
-print(10 ** 5)
-print(10 // 5)
-						</code></pre>
-					</section>
-					<section>
-						<h2>Logical Operators</h2>
-						<p><span class="green">Logical operators</span> are used to <span class="orange">combine conditional statements</span>:</p>
-						<pre><code class="python" data-line-numbers>
-print(10 > 9 and 10 > 8)
-print(10 > 9 or 10 < 8)
-print(not(10 > 9 and 10 > 8))
-						</code></pre>
-					</section>
-				</section>
                 <section>
                     <h2>Thank You!</h2>
                     <p>
