--- a/matplotlib_intro.html
+++ b/matplotlib_intro.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="utf-8">
-		<title>Python Booleans</title>
+		<title>Matplotlib Intro</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
 		<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/reveal.js/4.3.1/reset.min.css">
@@ -18,46 +18,17 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>
-					<h1>Python Booleans</h1>
-					<p>Working with booleans in Python.</p>
-				</section>
+                <section>
+                    <h2>Matplotlib Intro</h2>
+                    <section>
+                        <h3>What is Matplotlib?</h3>
+                        <p>Matplotlib is a low level graph plotting library in python that serves as a visualization utility.</p>
+                        <p>Matplotlib was created by <span class="orange">John D. Hunter</span>.</p>
+                        <p>Matplotlib is open source and we can use it freely.</p>
+                        <p>Matplotlib is mostly written in python, a few segments are written in C, Objective-C and Javascript for Platform compatibility.</p>
+                    </section>
+                </section>
 
-				<section>
-					<h2>Booleans</h2>
-					<p>In programming you often need to know if an expression is <span class="green">True</span> or <span class="red">False</span>. When you compare two values, the expression is evaluated and Python returns the <span class="orange">Boolean answer</span>.</p>
-					<pre><code class="python" data-line-numbers>
-print(10 > 9)
-print(10 == 9)
-print(10 < 9)
-					</code></pre>
-					<aside class="notes">
-						Speaker notes: Explain that these are comparison operators, and they will be covered in more detail in the operators presentation.
-					</aside>
-				</section>
-
-				<section>
-					<section>
-						<h2>Most Values are True</h2>
-						<p>Almost any value is evaluated to <span class="green">True</span> if it has some sort of content. Any string is <span class="green">True</span>, except <span class="red">empty strings</span>. Any number is <span class="green">True</span>, except <span class="red">0</span>. Any list, tuple, set, and dictionary are <span class="green">True</span>, except <span class="red">empty ones</span>.</p>
-					</section>
-					<section>
-						<h2>Some Values are False</h2>
-						<p>The following will return <span class="red">False</span>:</p>
-						<pre><code class="python" data-line-numbers>
-bool(False)
-bool(None)
-bool(0)
-bool("")
-bool(())
-bool([])
-bool({})
-						</code></pre>
-						<aside class="notes">
-							Speaker notes: This is an important concept to grasp for control flow.
-						</aside>
-					</section>
-				</section>
                 <section>
                     <h2>Thank You!</h2>
                     <p>
